@@ -16,3 +16,8 @@ Meanwhile, the compiled output files will be generated in the `bin` folder by de
 ## Dependency Management
 
 The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+
+
+javac --module-path lib --add-modules javafx.controls -d bin src/CSVViewer.java src/CSVRecord.java
+
+java --module-path lib --add-modules javafx.controls -cp bin CSVViewer
